--- a/pages/19999.html
+++ b/pages/19999.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9381/#Item_21" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9381/#Item_23" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -553,10 +553,16 @@ C^{poly}(a,b) \otimes C^{poly}(b,c) = P(C(a,b)) \otimes P(C(b,c)) \to P(C(a,b)\o
 
 <h2 id="references">References</h2>
 
-<p>Poly-morphisms are considered in section 0 of:</p>
+<p>The construction for enrichment in plain sets is considered (without the category-theoretic formulation) in:</p>
 
 <ul>
-<li id="Mochizuki12"><a class="existingWikiWord" href="/nlab/show/Shinichi+Mochizuki">Shinichi Mochizuki</a>, <em>Inter-universal Teichmüller theory I, Construction of Hodge theaters</em> (2012) (<a href="http://www.kurims.kyoto-u.ac.jp/~motizuki/Inter-universal%20Teichmuller%20Theory%20I.pdf">pdf</a>)</li>
+<li id="Mochizuki12"><a class="existingWikiWord" href="/nlab/show/Shinichi+Mochizuki">Shinichi Mochizuki</a>, section 0 of <em>Inter-universal Teichmüller theory I, Construction of Hodge theaters</em> (2012) (<a href="http://www.kurims.kyoto-u.ac.jp/~motizuki/Inter-universal%20Teichmuller%20Theory%20I.pdf">pdf</a>)</li>
+</ul>
+
+<p>The construction for enrichment in <a class="existingWikiWord" href="/nlab/show/posets">posets</a> is considered in</p>
+
+<ul>
+<li>Alveen Chand, <a class="existingWikiWord" href="/nlab/show/Ittay+Weiss">Ittay Weiss</a>, <em>An ordered framework for partial multivalued functors</em>, Computer Science and Engineering (APWC on CSE), 2015 2nd Asia-Pacific World Congress on Computer Science (<a href="https://arxiv.org/abs/1511.00746">arXiv:1511.00746</a>)</li>
 </ul>
 </body></html>
 
@@ -564,14 +570,14 @@ C^{poly}(a,b) \otimes C^{poly}(b,c) = P(C(a,b)) \otimes P(C(b,c)) \to P(C(a,b)\o
 
 <div class="revisedby">
   <p>
-  Last revised on December 22, 2018 at 05:45:47.
+  Last revised on December 22, 2018 at 08:30:29.
   See the <a href="https://ncatlab.org/nlab/history/poly-morphism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/poly-morphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/poly-morphism/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/poly-morphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/poly-morphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/poly-morphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/poly-morphism/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/poly-morphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/poly-morphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/poly-morphism/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
