--- a/pages/892.html
+++ b/pages/892.html
@@ -492,9 +492,17 @@ margin-left: 0em;
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li>A <a class="existingWikiWord" href="/nlab/show/closure+operator">closure operator</a> on a power set is a <em><a class="existingWikiWord" href="/nlab/show/Moore+closure">Moore closure</a></em>.</li>
+<li>
+<p>A <a class="existingWikiWord" href="/nlab/show/closure+operator">closure operator</a> on a power set is a <em><a class="existingWikiWord" href="/nlab/show/Moore+closure">Moore closure</a></em>.</p>
+</li>
 
-<li><a class="existingWikiWord" href="/nlab/show/power+object">power object</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/power+object">power object</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/poly-morphism">poly-morphism</a></p>
+</li>
 </ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/foundational+axiom">foundational axiom</a></div></body></html>
 
@@ -502,14 +510,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 16, 2018 at 20:21:44.
+  Last revised on December 22, 2018 at 08:04:54.
   See the <a href="https://ncatlab.org/nlab/history/power set" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/power+set" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/power+set/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/power+set" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/power+set" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/power+set" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/power+set/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/power+set" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/power+set" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/power set/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
