--- a/pages/2040.html
+++ b/pages/2040.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/5835/#Item_22" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5835/#Item_23" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -672,6 +672,14 @@ margin-left: 0em;
 <li><a href='#Cohomology'>Cohomology with coefficients in a Mackey functor</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
+<ul>
+<li><a href='#plain_mackey_functors'>Plain Mackey functors</a></li>
+<li><a href='#spectral_mackey_functors'>Spectral Mackey functors</a></li>
+<ul>
+<li><a href='#in_equivariant_stable_homotopy_theory'>In equivariant stable homotopy theory</a></li>
+<li><a href='#in_goodwillie_calculus'>In Goodwillie calculus</a></li>
+</ul>
+</ul>
 </ul>
 </div>
 
@@ -805,6 +813,8 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<h3 id="plain_mackey_functors">Plain Mackey functors</h3>
+
 <p>The original article is</p>
 
 <ul>
@@ -877,21 +887,23 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>The construction of <a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a> in terms of <a class="existingWikiWord" href="/nlab/show/Mackey+functors">Mackey functors</a> is due to</p>
+<p>Relation of Mackey functors to <a class="existingWikiWord" href="/nlab/show/sheaves+with+transfer">sheaves with transfer</a> in the theory of <a class="existingWikiWord" href="/nlab/show/motives">motives</a>:</p>
 
 <ul>
-<li id="GuillouMay11">
-<p><a class="existingWikiWord" href="/nlab/show/Bert+Guillou">Bert Guillou</a>, <a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, <em>Models of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-spectra as presheaves of spectra, (<a href="http://arxiv.org/abs/1110.3571">arXiv:1110.3571</a>)</em></p>
-</li>
+<li id="KahnYamazaki11"><a class="existingWikiWord" href="/nlab/show/Bruno+Kahn">Bruno Kahn</a>, Takao Yamazaki, <em>Voevodsky’s motives and Weil reciprocity</em>, Duke Mathematical Journal 162, 14 (2013) 2751-2796 (<a href="http://arxiv.org/abs/1108.2764">arXiv:1108.2764</a>)</li>
+</ul>
 
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Bert+Guillou">Bert Guillou</a>, <a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, <em>Permutative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-categories in equivariant infinite loop space theory</em> (<a href="http://arxiv.org/abs/1207.3459">arXiv:1207.3459</a>)</p>
-</li>
+<p><a class="existingWikiWord" href="/nlab/show/categorification">Categorification</a> to Mackey <a class="existingWikiWord" href="/nlab/show/2-functors">2-functors</a> is discussed found in</p>
 
-<li id="Nardin12">
-<p><a class="existingWikiWord" href="/nlab/show/Denis+Nardin">Denis Nardin</a>, section 2.6 of <em>Stability and distributivity over orbital ∞-categories</em>, 2012 (<a href="https://www.math.univ-paris13.fr/~nardin/thesis.pdf">pdf</a>)</p>
-</li>
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Paul+Balmer">Paul Balmer</a>, <a class="existingWikiWord" href="/nlab/show/Ivo+Dell%27Ambrogio">Ivo Dell'Ambrogio</a>, <em>Mackey 2-functors and Mackey 2-motives</em>, (<a href="https://arxiv.org/abs/1808.04902">arXiv:1808.04902</a>)</li>
+</ul>
 
+<h3 id="spectral_mackey_functors">Spectral Mackey functors</h3>
+
+<p>The general concept of spectral Mackey functors</p>
+
+<ul>
 <li id="Barwick14">
 <p><a class="existingWikiWord" href="/nlab/show/Clark+Barwick">Clark Barwick</a>, <em>Spectral Mackey functors and equivariant algebraic K-theory (I)</em>, Adv. Math., 304:646–727, 2017 (<a href="http://arxiv.org/abs/1404.0108">arXiv:1404.0108</a>)</p>
 </li>
@@ -905,22 +917,36 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h4 id="in_equivariant_stable_homotopy_theory">In equivariant stable homotopy theory</h4>
+
+<p>The construction of <a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a> in terms of spectral Mackey functors is originally due to</p>
+
+<ul>
+<li id="GuillouMay11">
+<p><a class="existingWikiWord" href="/nlab/show/Bert+Guillou">Bert Guillou</a>, <a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, <em>Models of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-spectra as presheaves of spectra, (<a href="http://arxiv.org/abs/1110.3571">arXiv:1110.3571</a>)</em></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Bert+Guillou">Bert Guillou</a>, <a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, <em>Permutative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-categories in equivariant infinite loop space theory</em> (<a href="http://arxiv.org/abs/1207.3459">arXiv:1207.3459</a>)</p>
+</li>
+
+<li id="Nardin12">
+<p><a class="existingWikiWord" href="/nlab/show/Denis+Nardin">Denis Nardin</a>, section 2.6 and appendix A of <em>Stability and distributivity over orbital ∞-categories</em>, 2012 (<a href="https://www.math.univ-paris13.fr/~nardin/thesis.pdf">pdf</a>)</p>
+</li>
+</ul>
+
 <p>The generalization of <a class="existingWikiWord" href="/nlab/show/K-theory+of+permutative+categories">K-theory of permutative categories</a> to spectral Mackey functors is discussed in</p>
 
 <ul>
 <li id="BohmannOsorno14"><a class="existingWikiWord" href="/nlab/show/Anna+Marie+Bohmann">Anna Marie Bohmann</a>, <a class="existingWikiWord" href="/nlab/show/Ang%C3%A9lica+Osorno">Angélica Osorno</a>, <em>Constructing equivariant spectra via categorical Mackey functors</em>, Algebraic &amp; Geometric Topology 15.1 (2015): 537-563 (<a href="http://arxiv.org/abs/1405.6126">arXiv:1405.6126</a>)</li>
 </ul>
 
-<p>Application of Mackey functors to the theory of <a class="existingWikiWord" href="/nlab/show/motives">motives</a> includes</p>
+<h4 id="in_goodwillie_calculus">In Goodwillie calculus</h4>
+
+<p>Discussion of <a class="existingWikiWord" href="/nlab/show/Goodwillie+calculus">Goodwillie calculus</a> via <a class="existingWikiWord" href="/nlab/show/spectral+Mackey+functors">spectral Mackey functors</a></p>
 
 <ul>
-<li id="KahnYamazaki11"><a class="existingWikiWord" href="/nlab/show/Bruno+Kahn">Bruno Kahn</a>, Takao Yamazaki, <em>Voevodsky’s motives and Weil reciprocity</em>, Duke Mathematical Journal 162, 14 (2013) 2751-2796 (<a href="http://arxiv.org/abs/1108.2764">arXiv:1108.2764</a>)</li>
-</ul>
-
-<p><a class="existingWikiWord" href="/nlab/show/categorification">Categorification</a> to Mackey <a class="existingWikiWord" href="/nlab/show/2-functors">2-functors</a> is discussed found in</p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/Paul+Balmer">Paul Balmer</a>, <a class="existingWikiWord" href="/nlab/show/Ivo+Dell%27Ambrogio">Ivo Dell'Ambrogio</a>, <em>Mackey 2-functors and Mackey 2-motives</em>, (<a href="https://arxiv.org/abs/1808.04902">arXiv:1808.04902</a>)</li>
+<li id="Glasman16"><a class="existingWikiWord" href="/nlab/show/Saul+Glasman">Saul Glasman</a>, <em>Goodwillie calculus and Mackey functors</em> (<a href="https://arxiv.org/abs/1610.03127">arXiv:1610.03127</a>)</li>
 </ul>
 </body></html>
 
@@ -928,14 +954,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 22, 2018 at 12:52:34.
+  Last revised on December 23, 2018 at 14:56:26.
   See the <a href="https://ncatlab.org/nlab/history/Mackey functor" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Mackey+functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Mackey+functor/36" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(36 revisions)</span> | <a href="/nlab/show/diff/Mackey+functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Mackey+functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Mackey+functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Mackey+functor/37" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(37 revisions)</span> | <a href="/nlab/show/diff/Mackey+functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Mackey+functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Mackey functor/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
