--- a/pages/3522.html
+++ b/pages/3522.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/789/#Item_36" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/789/#Item_37" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,12 @@ margin-left: 0em;
 
 <h4 id="category_theory"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\infty,1)</annotation></semantics></math>-Category theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+theory">(∞,1)-category theory</a></strong></p><h2 id="background">Background</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+theory">(∞,1)-category theory</a></strong></p>
+
+<h2 id="background">Background</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a></p>
 </li>
@@ -329,7 +334,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/%28n%2Cr%29-category">(n,r)-category</a></p>
 </li>
-</ul><h2 id="basic_concepts">Basic concepts</h2><ul>
+</ul>
+
+<h2 id="basic_concepts">Basic concepts</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category">(∞,1)-category</a></p>
 </li>
@@ -407,7 +416,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="universal_constructions">Universal constructions</h2><ul>
+</ul>
+
+<h2 id="universal_constructions">Universal constructions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/limit+in+quasi-categories">limit</a></p>
 
@@ -419,7 +432,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/adjoint+%28%E2%88%9E%2C1%29-functor">adjoint functors</a></p>
 </li>
-</ul><h2 id="local_presentation">Local presentation</h2><ul>
+</ul>
+
+<h2 id="local_presentation">Local presentation</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/locally+presentable+%28%E2%88%9E%2C1%29-category">locally presentable</a></p>
 
@@ -441,7 +458,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-Yoneda+lemma">(∞,1)-Yoneda lemma</a></p>
 </li>
@@ -457,7 +478,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monadicity+theorem">(∞,1)-monadicity theorem</a></p>
 </li>
-</ul><h2 id="extra_stuff_structure_properties">Extra stuff, structure, properties</h2><ul>
+</ul>
+
+<h2 id="extra_stuff_structure_properties">Extra stuff, structure, properties</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/stable+%28%E2%88%9E%2C1%29-category">stable (∞,1)-category</a></p>
 </li>
@@ -465,7 +490,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-topos">(∞,1)-topos</a></p>
 </li>
-</ul><h2 id="models">Models</h2><ul>
+</ul>
+
+<h2 id="models">Models</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/category+with+weak+equivalences">category with weak equivalences</a></p>
 </li>
@@ -517,19 +546,34 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/model+structure+on+simplicial+sets">model structure for Kan complexes</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/quasi-category+theory+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="stable_homotopy_theory">Stable Homotopy theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable homotopy theory</a></strong></p><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable homotopy theory</a></strong></p>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/homological+algebra">homological algebra</a>, <a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></li>
-</ul><p><em><a class="existingWikiWord" href="/nlab/show/Introduction+to+Stable+Homotopy+Theory">Introduction</a></em></p><h1 id="ingredients">Ingredients</h1><ul>
+</ul>
+
+<p><em><a class="existingWikiWord" href="/nlab/show/Introduction+to+Stable+Homotopy+Theory">Introduction</a></em></p>
+
+<h1 id="ingredients">Ingredients</h1>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a></li>
-</ul><h1 id="contents">Contents</h1><ul>
+</ul>
+
+<h1 id="contents">Contents</h1>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/loop+space+object">loop space object</a></p>
 </li>
@@ -599,13 +643,19 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><div>
-<p><a href="/nlab/edit/stable+homotopy+theory+-+contents">Edit this sidebar</a></p>
-</div></div>
+</ul>
+<div>
+<p>
+  <a href="/nlab/edit/stable+homotopy+theory+-+contents">Edit this sidebar</a>
+</p>
+</div></div></div>
 
 <h4 id="goodwillie_calculus">Goodwillie calculus</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/Goodwillie+calculus">Goodwillie calculus</a></strong> – approximation of <a class="existingWikiWord" href="/nlab/show/homotopy+theories">homotopy theories</a> by <a class="existingWikiWord" href="/nlab/show/stable+homotopy+theories">stable homotopy theories</a></p><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/Goodwillie+calculus">Goodwillie calculus</a></strong> – approximation of <a class="existingWikiWord" href="/nlab/show/homotopy+theories">homotopy theories</a> by <a class="existingWikiWord" href="/nlab/show/stable+homotopy+theories">stable homotopy theories</a></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Goodwillie-differentiable+%28%E2%88%9E%2C1%29-category">Goodwillie-differentiable (∞,1)-category</a></p>
 </li>
@@ -651,7 +701,7 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul></div>
+</ul></div></div>
 </div>
 </div>
 
@@ -1100,20 +1150,32 @@ e^{x - 1} \cdot e^{-\frac{(x - 1)^2}{2}} \cdot e^{\frac{(x - 1)^3}{3}} \ldots = 
 <p><a class="existingWikiWord" href="/nlab/show/Michael+Ching">Michael Ching</a>, <em>Calculus of Functors and Configuration Spaces</em>, Conference on Pure and Applied Topology Isle of Skye, Scotland, 21-25 June, 2005 (<a href="https://www3.amherst.edu/~mching/Work/skye.pdf">pdf</a>)</p>
 </li>
 </ul>
+
+<p>Discussion in terms of <a class="existingWikiWord" href="/nlab/show/spectral+Mackey+functors">spectral Mackey functors</a></p>
+
+<ul>
+<li id="Glasman15">
+<p><a class="existingWikiWord" href="/nlab/show/Saul+Glasman">Saul Glasman</a>, <em>Stratified categories, geometric fixed points and a generalized Arone-Ching theorem</em> (<a href="https://arxiv.org/abs/1507.01976">arXiv:1507.01976</a>, <a href="http://www-users.math.umn.edu/~sglasman/strattalk.pdf">talk notes pdf</a>)</p>
+</li>
+
+<li id="Glasman16">
+<p><a class="existingWikiWord" href="/nlab/show/Saul+Glasman">Saul Glasman</a>, <em>Goodwillie calculus and Mackey functors</em> (<a href="https://arxiv.org/abs/1610.03127">arXiv:1610.03127</a>)</p>
+</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November 23, 2018 at 06:01:23.
+  Last revised on December 23, 2018 at 15:23:02.
   See the <a href="https://ncatlab.org/nlab/history/Goodwillie calculus" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Goodwillie+calculus" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Goodwillie+calculus/54" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(54 revisions)</span> | <a href="/nlab/show/diff/Goodwillie+calculus" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Goodwillie+calculus" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Goodwillie+calculus" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Goodwillie+calculus/55" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(55 revisions)</span> | <a href="/nlab/show/diff/Goodwillie+calculus" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Goodwillie+calculus" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Goodwillie calculus/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
