--- a/pages/5375.html
+++ b/pages/5375.html
@@ -317,7 +317,12 @@ margin-left: 0em;
 
 <h4 id="geometry">Geometry</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/higher+geometry">higher geometry</a></strong> / <strong><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></strong></p><h2 id="ingredients">Ingredients</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/higher+geometry">higher geometry</a></strong> / <strong><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></strong></p>
+
+<h2 id="ingredients">Ingredients</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+topos+theory">higher topos theory</a></p>
 </li>
@@ -325,7 +330,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></p>
 </li>
-</ul><h2 id="concepts">Concepts</h2><ul>
+</ul>
+
+<h2 id="concepts">Concepts</h2>
+
+<ul>
 <li>
 <p><strong>geometric <a class="existingWikiWord" href="/nlab/show/big+and+little+toposes">little</a> <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-topos">(∞,1)-topos</a>es</strong></p>
 
@@ -359,7 +368,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/geometric+%E2%88%9E-stacks">geometric ∞-stacks</a></li>
 </ul>
 </li>
-</ul><h2 id="constructions">Constructions</h2><ul>
+</ul>
+
+<h2 id="constructions">Constructions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/loop+space+object">loop space object</a>, <a class="existingWikiWord" href="/nlab/show/free+loop+space+object">free loop space object</a></p>
 </li>
@@ -367,7 +380,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/fundamental+%E2%88%9E-groupoid+in+a+locally+%E2%88%9E-connected+%28%E2%88%9E%2C1%29-topos">fundamental ∞-groupoid in a locally ∞-connected (∞,1)-topos</a> / <a class="existingWikiWord" href="/nlab/show/fundamental+%E2%88%9E-groupoid+of+a+locally+%E2%88%9E-connected+%28%E2%88%9E%2C1%29-topos">of a locally ∞-connected (∞,1)-topos</a></p>
 </li>
-</ul><h2 id="examples">Examples</h2><ul>
+</ul>
+
+<h2 id="examples">Examples</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/derived+algebraic+geometry">derived algebraic geometry</a></p>
 
@@ -427,7 +444,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+Cartan+geometry">higher Cartan geometry</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Isbell+duality">Isbell duality</a></p>
 </li>
@@ -439,11 +460,12 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Tannaka+duality+for+geometric+stacks">Tannaka duality for geometric stacks</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/higher+geometry+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -520,7 +542,7 @@ margin-left: 0em;
 <p>written in response to <a class="existingWikiWord" href="/nlab/show/Faltings">Faltings</a>‘ work on the <a class="existingWikiWord" href="/nlab/show/Mordell+Conjecture">Mordell Conjecture</a>, and the note of the <a class="existingWikiWord" href="/nlab/show/Long+March">Long March</a>:</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Alexandre+Grothendieck">Alexandre Grothendieck</a>, Notes Anabéliennes (<a href="https://github.com/carmonamateo/NotesAnabeliennes">link</a>).</li>
+<li><a class="existingWikiWord" href="/nlab/show/Alexandre+Grothendieck">Alexandre Grothendieck</a>, Notes Anabéliennes (<a href="https://github.com/carmonamateo/LaLongueMarche">link</a>).</li>
 </ul>
 
 <p>There is some discussion of the area in</p>
@@ -616,14 +638,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 28, 2018 at 20:18:39.
+  Last revised on December 24, 2018 at 07:48:55.
   See the <a href="https://ncatlab.org/nlab/history/anabelian geometry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/anabelian+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anabelian+geometry/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/anabelian+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anabelian+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/anabelian+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anabelian+geometry/33" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(33 revisions)</span> | <a href="/nlab/show/diff/anabelian+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anabelian+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/anabelian geometry/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
