--- a/pages/255.html
+++ b/pages/255.html
@@ -715,7 +715,7 @@ margin-left: 0em;
 </ul>
 <li><a href='#examples'>Examples</a></li>
 <ul>
-<li><a href='#general'>General</a></li>
+<li><a href='#monads_on_'>Monads on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Set</mi></mrow><annotation encoding="application/x-tex">Set</annotation></semantics></math></a></li>
 <li><a href='#algebra'>Algebra</a></li>
 <li><a href='#monads_in_cat'>Monads in Cat</a></li>
 <li><a href='#other_examples'>Other examples</a></li>
@@ -841,9 +841,9 @@ margin-left: 0em;
 
 <h2 id="examples">Examples</h2>
 
-<h3 id="general">General</h3>
+<h3 id="monads_on_">Monads on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Set</mi></mrow><annotation encoding="application/x-tex">Set</annotation></semantics></math></h3>
 
-<p>General types of monads that have standard usages also as <a class="existingWikiWord" href="/nlab/show/monad+%28computer+science%29">monads in computer science</a>.</p>
+<p>Many of these monads also have standard usages as <a class="existingWikiWord" href="/nlab/show/monad+%28computer+science%29">monads in computer science</a>.</p>
 
 <div class="num_example" id="MaybeMonad">
 <h6 id="example">Example</h6>
@@ -868,7 +868,9 @@ margin-left: 0em;
 <div class="num_example">
 <h6 id="example_4">Example</h6>
 
-<p><a class="existingWikiWord" href="/nlab/show/continuation+monad">continuation monad</a></p>
+<p>The contravariant <a class="existingWikiWord" href="/nlab/show/power+set">power set</a> functor is it’s own right adjoint, giving <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="0em" rspace="thinmathspace">Set</mo><mo stretchy="false">(</mo><mi>A</mi><mo>,</mo><mi>P</mi><mi>B</mi><mo stretchy="false">)</mo><mo>≅</mo><mo lspace="0em" rspace="thinmathspace">Set</mo><mo stretchy="false">(</mo><mi>B</mi><mo>,</mo><mi>P</mi><mi>A</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\Set(A,P B) \cong \Set (B, P A)</annotation></semantics></math>. Note that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>hom</mi><mo stretchy="false">(</mo><mi>A</mi><mo>,</mo><mi>P</mi><mi>B</mi><mo stretchy="false">)</mo><mo>=</mo><mi>hom</mi><mo stretchy="false">(</mo><mi>A</mi><mo>,</mo><mi>hom</mi><mo stretchy="false">(</mo><mi>B</mi><mo>,</mo><mi>Ω</mi><mo stretchy="false">)</mo><mo>≅</mo><mi>hom</mi><mo stretchy="false">(</mo><mi>A</mi><mo>×</mo><mi>B</mi><mo>,</mo><mi>Ω</mi><mo stretchy="false">)</mo><mo>=</mo><mi>P</mi><mo stretchy="false">(</mo><mi>A</mi><mo>×</mo><mi>B</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\hom(A, P B) = \hom(A, \hom(B,\Omega) \cong \hom( A \times B, \Omega) = P(A \times B)</annotation></semantics></math> inducing a <strong>double power set monad</strong> taking a set <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>P</mi> <mn>2</mn></msup><mi>A</mi></mrow><annotation encoding="application/x-tex">P^2 A</annotation></semantics></math>. The components of the unit are the <a class="existingWikiWord" href="/nlab/show/ultrafilter">principle ultrafilter</a> functions <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>η</mi> <mi>A</mi></msub><mo>:</mo><mi>A</mi><mo>→</mo><msup><mi>P</mi> <mn>2</mn></msup><mi>A</mi></mrow><annotation encoding="application/x-tex">\eta_A : A \to P^2 A</annotation></semantics></math> which send an element <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>a</mi></mrow><annotation encoding="application/x-tex">a</annotation></semantics></math> to the set of subsets of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> that contain <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>a</mi></mrow><annotation encoding="application/x-tex">a</annotation></semantics></math>. The components of the multiplication <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>μ</mi> <mi>A</mi></msub></mrow><annotation encoding="application/x-tex">\mu_A</annotation></semantics></math> is the inverse image function for the map <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>μ</mi> <mrow><mi>P</mi><mi>A</mi></mrow></msub><mo>:</mo><mi>P</mi><mi>A</mi><mo>→</mo><msup><mi>P</mi> <mn>3</mn></msup><mi>A</mi></mrow><annotation encoding="application/x-tex">\mu_{P A} : P A \to P^3 A</annotation></semantics></math>. Which can be painfully stated as: the function taking a set of sets of sets of subsets to the set of subsets of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> with the property that one of the sets of sets of subsets is the set of all sets of subsets of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> that include that particular subset as an element.</p>
+
+<p>Replacing the two element <a class="existingWikiWord" href="/nlab/show/power+object">power object</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ω</mi></mrow><annotation encoding="application/x-tex">\Omega</annotation></semantics></math> with any other set gives similar monads. In computer science contexts these are known as <a class="existingWikiWord" href="/nlab/show/continuation+monad">continuation monads</a>. This construction can also be generalised for any other <a class="existingWikiWord" href="/nlab/show/cartesian+closed+category">cartesian closed category</a>. For example there is a similar <strong>double dual monad* on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mo lspace="0em" rspace="thinmathspace">Vect</mo> <mi>k</mi></msub></mrow><annotation encoding="application/x-tex">\Vect_k</annotation></semantics></math>.</strong></p>
 </div>
 
 <div class="num_example">
@@ -881,28 +883,20 @@ margin-left: 0em;
 <h6 id="example_6">Example</h6>
 
 <p><a class="existingWikiWord" href="/nlab/show/necessity">necessity</a></p>
-</div>
-
-<div class="num_example">
-<h6 id="example_7">Example</h6>
 
 <p><a class="existingWikiWord" href="/nlab/show/possibility">possibility</a></p>
-</div>
-
-<div class="num_example">
-<h6 id="example_8">Example</h6>
 </div>
 
 <h3 id="algebra">Algebra</h3>
 
 <div class="num_example" id="FreeRModMonad">
-<h6 id="example_9">Example</h6>
+<h6 id="example_7">Example</h6>
 
 <p>The free-forgetful <a class="existingWikiWord" href="/nlab/show/adjunction">adjunction</a> between <a class="existingWikiWord" href="/nlab/show/sets">sets</a> and the category of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/modules">modules</a>. This induces the <strong>free <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math>-module monad</strong> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi><mo stretchy="false">[</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">]</mo><mo>:</mo><mi>Set</mi><mo>→</mo><mi>Set</mi></mrow><annotation encoding="application/x-tex">R[-] : Set \to Set</annotation></semantics></math>. The <strong>free abelian group monad</strong> and <strong>free vector speace monad</strong> are special cases.</p>
 </div>
 
 <div class="num_example" id="FreeGroupMonad">
-<h6 id="example_10">Example</h6>
+<h6 id="example_8">Example</h6>
 
 <p>The free-forgetful <a class="existingWikiWord" href="/nlab/show/adjunction">adjunction</a> between <a class="existingWikiWord" href="/nlab/show/sets">sets</a> and the category of <a class="existingWikiWord" href="/nlab/show/groups">groups</a> gives the <strong>free group monad</strong> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi><mo>:</mo><mi>Set</mi><mo>→</mo><mi>Set</mi></mrow><annotation encoding="application/x-tex">F : Set \to Set</annotation></semantics></math> that sends <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> to the set <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi><mo stretchy="false">(</mo><mi>A</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">F(A)</annotation></semantics></math> of finite words in the letters <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>a</mi><mo>∈</mo><mi>A</mi></mrow><annotation encoding="application/x-tex">a \in A</annotation></semantics></math> together with inverses <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>a</mi> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow></msup></mrow><annotation encoding="application/x-tex">a^{-1}</annotation></semantics></math>.</p>
 </div>
@@ -1098,14 +1092,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 25, 2018 at 11:24:39.
+  Last revised on December 25, 2018 at 12:52:54.
   See the <a href="https://ncatlab.org/nlab/history/monad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/monad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/monad/73" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(73 revisions)</span> | <a href="/nlab/show/diff/monad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/monad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/monad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/monad/74" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(74 revisions)</span> | <a href="/nlab/show/diff/monad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/monad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/monad/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
