--- a/pages/16790.html
+++ b/pages/16790.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -317,7 +317,13 @@ margin-left: 0em;
 
 <h4 id="gravity">Gravity</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></strong></p><h2 id="formalism">Formalism</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></strong></p>
+
+<h2 id="formalism">Formalism</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Poincar%C3%A9+Lie+algebra">Poincaré Lie algebra</a></p>
 
@@ -343,7 +349,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="definition">Definition</h2><ul>
+</ul>
+
+<h2 id="definition">Definition</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Einstein-Hilbert+action">Einstein-Hilbert action</a>, <a class="existingWikiWord" href="/nlab/show/Einstein%27s+equations">Einstein's equations</a>, <a class="existingWikiWord" href="/nlab/show/general+relativity">general relativity</a></p>
 
@@ -357,7 +367,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="spacetime_configurations">Spacetime configurations</h2><ul>
+</ul>
+
+<h2 id="spacetime_configurations">Spacetime configurations</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a></p>
 </li>
@@ -379,7 +393,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="properties">Properties</h2><ul>
+</ul>
+
+<h2 id="properties">Properties</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Kaluza-Klein+mechanism">Kaluza-Klein mechanism</a></p>
 </li>
@@ -399,7 +417,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/weak+gravity+conjecture">weak gravity conjecture</a></p>
 </li>
-</ul><h2 id="spacetimes">Spacetimes</h2><ul>
+</ul>
+
+<h2 id="spacetimes">Spacetimes</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/standard+model+of+cosmology">standard model of cosmology</a></p>
 </li>
@@ -407,9 +429,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a></p>
 </li>
-</ul><table><thead><tr><th><strong> </strong></th><th>vanishing </th><th>positive </th></tr></thead><tbody><tr><td style="text-align: left;"><strong>vanishing </strong></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
-<tr><td style="text-align: left;"><strong>positive </strong></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
-</tbody></table><ul>
+</ul>
+
+<table><thead><tr><th><strong><a class="existingWikiWord" href="/nlab/show/black+hole">black hole</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a></strong></th><th>vanishing <a class="existingWikiWord" href="/nlab/show/angular+momentum">angular momentum</a></th><th><a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> <a class="existingWikiWord" href="/nlab/show/angular+momentum">angular momentum</a></th></tr></thead><tbody><tr><td style="text-align: left;"><strong>vanishing <a class="existingWikiWord" href="/nlab/show/charge">charge</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Schwarzschild+spacetime">Schwarzschild spacetime</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Kerr+spacetime">Kerr spacetime</a></td></tr>
+<tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> <a class="existingWikiWord" href="/nlab/show/charge">charge</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Reissner-Nordstrom+spacetime">Reissner-Nordstrom spacetime</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Kerr-Newman+spacetime">Kerr-Newman spacetime</a></td></tr>
+</tbody></table>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/asymptotically+flat+spacetime">asymptotically flat spacetime</a></p>
 </li>
@@ -457,7 +483,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/black+brane">black brane</a></p>
 </li>
-</ul><h2 id="quantum_theory">Quantum theory</h2><ul>
+</ul>
+
+<h2 id="quantum_theory">Quantum theory</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/quantum+gravity">quantum gravity</a></p>
 
@@ -471,7 +501,8 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul></div>
+</ul>
+</div></div>
 </div>
 </div>
 
@@ -894,6 +925,14 @@ margin-left: 0em;
 <p>Nissan Itzhaki, <a class="existingWikiWord" href="/nlab/show/Juan+Maldacena">Juan Maldacena</a>, Jacob Sonnenschein, Shimon Yankielowicz, section 9 of <em>Supergravity and The Large <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi></mrow><annotation encoding="application/x-tex">N</annotation></semantics></math> Limit of Theories With Sixteen Supercharges</em>, Phys. Rev. D 58, 046004 1998 (<a href="https://arxiv.org/abs/hep-th/9802042">arXiv:hep-th/9802042</a>)</p>
 </li>
 
+<li id="ItzhakiTseytlinYankielowicz98">
+<p>N. Itzhaki, <a class="existingWikiWord" href="/nlab/show/Arkady+Tseytlin">Arkady Tseytlin</a>, S. Yankielowicz, <em>Supergravity Solutions for Branes Localized Within Branes</em>, Phys.Lett.B432:298-304, 1998 (<a href="https://arxiv.org/abs/hep-th/9803103">arXiv:hep-th/9803103</a>)</p>
+</li>
+
+<li id="Hashimoto98">
+<p>Akikazu Hashimoto, <em>Supergravity Solutions for Localized Intersections of Branes</em>, JHEP 9901 (1999) 018 (<a href="https://arxiv.org/abs/hep-th/9812159">arXiv:hep-th/9812159</a>)</p>
+</li>
+
 <li id="Asano00">
 <p>Masako Asano, section 3 of <em>Compactification and Identification of Branes in the Kaluza-Klein monopole backgrounds</em> (<a href="https://arxiv.org/abs/hep-th/0003241">arXiv:hep-th/0003241</a>)</p>
 </li>
@@ -922,14 +961,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 22, 2018 at 03:11:26.
+  Last revised on December 26, 2018 at 17:40:02.
   See the <a href="https://ncatlab.org/nlab/history/near-horizon geometry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/near-horizon+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/near-horizon+geometry/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/near-horizon+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/near-horizon+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/near-horizon+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/near-horizon+geometry/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/near-horizon+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/near-horizon+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/near-horizon geometry/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
