--- a/pages/1788.html
+++ b/pages/1788.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,46 +308,21 @@ margin-left: 0em;
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
-<body>
-<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>⫽</mo></mrow><annotation encoding="application/x-tex">\sslash</annotation></semantics></math></p>
-
-<p><br /></p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mo>∪</mo> <mi>DK</mi></msub><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>DK</mi><mo stretchy="false">(</mo><msub><mi>V</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo>×</mo><mi>DK</mi><mo stretchy="false">(</mo><msub><mi>W</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo>=</mo><mi>U</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>V</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>×</mo><mi>U</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>W</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mover><mo>→</mo><mo>≃</mo></mover><mi>U</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>V</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo>×</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>W</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mover><mo>→</mo><mrow><mi>U</mi><mo stretchy="false">(</mo><mi>p</mi><mo stretchy="false">)</mo></mrow></mover><mi>U</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>V</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo>⊗</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>W</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mrow><mi>U</mi><mo stretchy="false">(</mo><mi>γ</mi><mo stretchy="false">)</mo></mrow></mover><mi>U</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>V</mi> <mo>•</mo></msub><mo>⊗</mo><msub><mi>W</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mover><mo>→</mo><mrow><mi>U</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">(</mo><mi>f</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow></mover><mi>U</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>Z</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>=</mo><mi>DK</mi><mo stretchy="false">(</mo><msub><mi>Z</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
-  \cup_{DK}
-  \;\colon\;
-  DK(V_\bullet)\times DK(W_\bullet)
-  =
-  U(\Gamma(V_\bullet)) \times U(\Gamma(W_\bullet))
-  \stackrel{\simeq}{\to}
-  U(\Gamma(V_\bullet) \times \Gamma(W_\bullet))
-  \stackrel{U(p)}{\to}
-  U(\Gamma(V_\bullet)\otimes \Gamma(W_\bullet))
-  \stackrel{U(\gamma)}{\longrightarrow}
-  U(\Gamma(V_\bullet \otimes W_\bullet))
-  \stackrel{U(\Gamma(f))}{\to}
-  U(\Gamma(Z_\bullet))
-  =
-  DK(Z_\bullet)
-  \,.
-
-</annotation></semantics></math></div>
-<p><br /></p>
-
-<p><img src="/nlab/files/pentagon.svg" alt="" /></p>
-</body></html>
+<body><table><thead><tr><th></th><th></th></tr></thead><tbody><tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/multi-centered+Taub-NUT+space">multi-centered Taub-NUT space</a></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>d</mi><msubsup><mi>s</mi> <mi>TaubNUT</mi> <mn>2</mn></msubsup><mo>=</mo><msup><mi>U</mi> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow></msup><mo stretchy="false">(</mo><mi>d</mi><mi>ϕ</mi><mo>+</mo><mover><mi>ω</mi><mo stretchy="false">→</mo></mover><mo>⋅</mo><mi>d</mi><mover><mi>r</mi><mo stretchy="false">→</mo></mover><msup><mo stretchy="false">)</mo> <mn>2</mn></msup><mo>+</mo><mi>U</mi><mi>d</mi><msup><mover><mi>r</mi><mo stretchy="false">→</mo></mover> <mn>2</mn></msup></mrow><annotation encoding="application/x-tex">d s^2_{TaubNUT} = U^{-1}(d \phi + \vec \omega \cdot d \vec r)^2 + U d \vec r^2</annotation></semantics></math></td></tr>
+</tbody></table></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on December 26, 2018 at 16:59:18.
+  Last revised on December 27, 2018 at 06:58:01.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1732" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1732 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1733" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1733 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
