--- a/pages/16790.html
+++ b/pages/16790.html
@@ -954,7 +954,7 @@ margin-left: 0em;
 </li>
 
 <li id="ItzhakiTseytlinYankielowicz98">
-<p>N. Itzhaki, <a class="existingWikiWord" href="/nlab/show/Arkady+Tseytlin">Arkady Tseytlin</a>, S. Yankielowicz, <em>Supergravity Solutions for Branes Localized Within Branes</em>, Phys.Lett.B432:298-304, 1998 (<a href="https://arxiv.org/abs/hep-th/9803103">arXiv:hep-th/9803103</a>)</p>
+<p>Nissan Itzhaki, <a class="existingWikiWord" href="/nlab/show/Arkady+Tseytlin">Arkady Tseytlin</a>, S. Yankielowicz, <em>Supergravity Solutions for Branes Localized Within Branes</em>, Phys.Lett.B432:298-304, 1998 (<a href="https://arxiv.org/abs/hep-th/9803103">arXiv:hep-th/9803103</a>)</p>
 </li>
 
 <li id="Hashimoto98">
@@ -989,14 +989,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 26, 2018 at 18:12:08.
+  Last revised on December 27, 2018 at 07:11:11.
   See the <a href="https://ncatlab.org/nlab/history/near-horizon geometry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/near-horizon+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/near-horizon+geometry/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/near-horizon+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/near-horizon+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/near-horizon+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/near-horizon+geometry/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/near-horizon+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/near-horizon+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/near-horizon geometry/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
