--- a/pages/16256.html
+++ b/pages/16256.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -739,6 +739,10 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/David+Gross">David Gross</a> and M. Perry, Nucl. Phys. B226 (1983) 29.</p>
 </li>
 
+<li id="Ruback86">
+<p>P. J. Ruback, <em>The motion of Kaluza-Klein monopoles</em>, Comm. Math. Phys. Volume 107, Number 1 (1986), 93-102 (<a href="https://projecteuclid.org/euclid.cmp/1104115933">euclid:1104115933</a>)</p>
+</li>
+
 <li>
 <p>A. L. Cavalcanti de Oliveira, E. R. Bezerra de Mello, <em>Kaluza-Klein Magnetic Monopole in Five-Dimensional Global Monopole Sapcetime</em>, Class.Quant.Grav. 21 (2004) 1685-1694 (<a href="http://arxiv.org/abs/hep-th/0309189">arXiv:hep-th/0309189</a>)</p>
 </li>
@@ -853,14 +857,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 27, 2018 at 06:42:43.
+  Last revised on December 27, 2018 at 07:24:15.
   See the <a href="https://ncatlab.org/nlab/history/Kaluza-Klein monopole" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Kaluza-Klein+monopole" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Kaluza-Klein+monopole/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/Kaluza-Klein+monopole" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Kaluza-Klein+monopole" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Kaluza-Klein+monopole" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Kaluza-Klein+monopole/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/Kaluza-Klein+monopole" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Kaluza-Klein+monopole" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Kaluza-Klein monopole/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
