--- a/pages/1425.html
+++ b/pages/1425.html
@@ -308,7 +308,11 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <svg xmlns:se="http://svg-edit.googlecode.com" xmlns:math="http://www.w3.org/1998/Math/MathML" width="480" height="320" se:nonce="39887">
+    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<body>
+
+<svg width="480" height="320" xmlns="http://www.w3.org/2000/svg">
  <defs>
   <marker id="se_marker_end_svg_39887_2" markerUnits="strokeWidth" orient="auto" viewBox="0 0 100 100" markerWidth="5" markerHeight="5" refX="50" refY="50">
    <path id="svg_39887_3" d="m100,50l-100,40l30,-40l-30,-40l100,40z" fill="#000000" stroke="#000000" stroke-width="10"></path>
@@ -337,7 +341,7 @@ margin-left: 0em;
   <line marker-end="url(#se_marker_end_svg_39887_18)" id="svg_39887_18" stroke="#000000" stroke-width="2" y2="308" x2="308" y1="308" x1="200"></line>
   <line stroke="#000000" stroke-width="2" x1="67" y1="116" x2="220.00001" y2="31" id="svg_39887_2" marker-end="url(#se_marker_end_svg_39887_2)"></line>
   <foreignObject x="170.333333" y="5" id="svg_39887_1" font-size="16" width="136" height="20">
-   <math display="inline">
+   <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
     <semantics>
      <mrow>
       <mo stretchy="false">(</mo>
@@ -357,7 +361,7 @@ margin-left: 0em;
    </math>
   </foreignObject>
   <foreignObject height="20" width="136" font-size="16" id="svg_39887_13" y="120" x="1">
-   <math display="inline">
+   <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
     <semantics>
      <mrow>
       <mo stretchy="false">(</mo>
@@ -377,7 +381,7 @@ margin-left: 0em;
    </math>
   </foreignObject>
   <foreignObject x="343.666667" y="120" id="svg_39887_4" font-size="16" width="136" height="20">
-   <math display="inline">
+   <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
     <semantics>
      <mrow>
       <mi>w</mi>
@@ -397,7 +401,7 @@ margin-left: 0em;
    </math>
   </foreignObject>
   <foreignObject height="20" width="136" font-size="16" id="svg_39887_5" y="295" x="51.666667">
-   <math display="inline">
+   <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
     <semantics>
      <mrow>
       <mo stretchy="false">(</mo>
@@ -417,7 +421,7 @@ margin-left: 0em;
    </math>
   </foreignObject>
   <foreignObject x="317" y="295" id="svg_39887_6" font-size="16" width="136" height="20">
-   <math display="inline">
+   <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
     <semantics>
      <mrow>
       <mi>w</mi>
@@ -437,7 +441,7 @@ margin-left: 0em;
    </math>
   </foreignObject>
   <foreignObject height="24" width="72" font-size="16" id="svg_39887_7" y="52" x="66.333333">
-   <math display="inline">
+   <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
     <semantics>
      <mrow>
       <msub>
@@ -458,7 +462,7 @@ margin-left: 0em;
    </math>
   </foreignObject>
   <foreignObject x="338" y="52" id="svg_39887_8" font-size="16" width="72" height="24">
-   <math display="inline">
+   <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
     <semantics>
      <mrow>
       <msub>
@@ -479,7 +483,7 @@ margin-left: 0em;
    </math>
   </foreignObject>
   <foreignObject height="24" width="92" font-size="16" id="svg_39887_9" y="215" x="-0.666667">
-   <math display="inline">
+   <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
     <semantics>
      <mrow>
       <msub>
@@ -503,7 +507,7 @@ margin-left: 0em;
    </math>
   </foreignObject>
   <foreignObject x="384.333333" y="215" id="svg_39887_10" font-size="16" width="92" height="24">
-   <math display="inline">
+   <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
     <semantics>
      <mrow>
       <msub>
@@ -527,7 +531,7 @@ margin-left: 0em;
    </math>
   </foreignObject>
   <foreignObject id="svg_39887_21" height="24" width="72" font-size="16" y="280" x="214.666667">
-   <math display="inline">
+   <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
     <semantics>
      <mrow>
       <msub>
@@ -550,18 +554,20 @@ margin-left: 0em;
  </g>
 </svg>
 
+</body></html>
+
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on December 26, 2018 at 16:25:07.
+  Last revised on December 27, 2018 at 14:00:44.
   See the <a href="https://ncatlab.org/nlab/history/monoidal category &gt; pentagon" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/monoidal+category+%3E+pentagon" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/monoidal+category+%3E+pentagon/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/monoidal+category+%3E+pentagon" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/monoidal+category+%3E+pentagon" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/monoidal+category+%3E+pentagon" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/monoidal+category+%3E+pentagon/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/monoidal+category+%3E+pentagon" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/monoidal+category+%3E+pentagon" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/monoidal category &gt; pentagon/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
