--- a/pages/3807.html
+++ b/pages/3807.html
@@ -567,8 +567,8 @@ margin-left: 0em;
 <p>A. M. Odlyzko, <em>The <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mn>10</mn> <mn>22</mn></msup></mrow><annotation encoding="application/x-tex">10^{22}</annotation></semantics></math>-nd zero of the Riemann zeta function</em>, in Lapidus et al. (eds.) proceedings of AMS special session on <em>Dynamical, Spectral, and Arithmetic Zeta Functions</em>, 1999 (<a href="http://www.dtc.umn.edu/~odlyzko/doc/zeta.10to22.pdf">pdf</a>)</p>
 </li>
 
-<li>
-<p>{Gourdon04} Xavier Gourdon, <em>The <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mn>10</mn> <mn>13</mn></msup></mrow><annotation encoding="application/x-tex">10^{13}</annotation></semantics></math> first zeros of the Riemann Zeta function, and zeros computation at very large height</em>, 2004 (<a href="http://numbers.computation.free.fr/Constants/Miscellaneous/zetazeros1e13-1e24.pdf">pdf</a>, <a href="http://numbers.computation.free.fr/Constants/Miscellaneous/zetazeroscompute.html">webpage</a>)</p>
+<li id="Gourdon04">
+<p>Xavier Gourdon, <em>The <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mn>10</mn> <mn>13</mn></msup></mrow><annotation encoding="application/x-tex">10^{13}</annotation></semantics></math> first zeros of the Riemann Zeta function, and zeros computation at very large height</em>, 2004 (<a href="http://numbers.computation.free.fr/Constants/Miscellaneous/zetazeros1e13-1e24.pdf">pdf</a>, <a href="http://numbers.computation.free.fr/Constants/Miscellaneous/zetazeroscompute.html">webpage</a>)</p>
 </li>
 
 <li>
@@ -581,7 +581,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 29, 2018 at 09:59:10.
+  Last revised on December 29, 2018 at 10:00:28.
   See the <a href="https://ncatlab.org/nlab/history/Riemann hypothesis" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
